Fix spacing

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 nav {
     width: 40%;
-    margin: 10% 5% 5% 2%;
+    margin: 8% 5% 5% 2%;
     position: fixed;
     top: 0;
     left: 0;
@@ -19,10 +19,10 @@ nav ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    line-height: 2.5;
+    line-height: 2.4;
 }
 .nav-title {
-    font-size: 2.5rem;
+    font-size: 2.4rem;
     font-weight: bold;
     margin: 5% 0 5% 0;
     text-decoration: underline;
